[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Erik LaBianca <erik.labianca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
numpy = "^1.25.2"
transformers = "^4.31.0"
datasets = "^2.14.4"
tiktoken = "^0.4.0"
wandb = "^0.15.8"
tqdm = "^4.65.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
